Template for course updated

--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
+		<title>Audio-Visual Data Analysis with Statistical and Deep Learning</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="/">Lectures</a></li>
+	        	<li><a href="/about">Readings</a></li>
+        		<li><a href="/cv">Homework</a></li>
+        		<li><a href="/blog">Examples</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>An Artificial Intelligence Course</h1>
+				<p>2016 Session 1<a href="https://summerinstitutes.stanford.edu">Stanford Pre-Collegiate Summer Institutes</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:iran@stanford.edu">(Principal Instructor) Irán Román's email</a></li>
+        		<li><a href="mailto:mjolsen@stanford.edu"></a>(Teaching Assitant) Michael Olsen</li>
 			</ul>
 		</footer>
 	</body>
