--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         		<li><a href="/">Lectures</a></li>
 	        	<li><a href="/about">Readings</a></li>
         		<li><a href="/cv">Homework</a></li>
-        		<li><a href="/blog">Examples</a></li>
     		</ul>
 		</nav>
 		<div class="container">
@@ -22,8 +21,8 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:iran@stanford.edu">(Principal Instructor) Irán Román's email</a></li>
-        		<li><a href="mailto:mjolsen@stanford.edu"></a>(Teaching Assitant) Michael Olsen</li>
+        		<li><a href="mailto:iran@stanford.edu">Irán Román's (Principal Instructor) </a></li>
+        		<li><a href="mailto:mjolsen@stanford.edu">Michael Olsen (Teaching Assitant)</a></li>
 			</ul>
 		</footer>
 	</body>
