--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>An Artificial Intelligence Course</h1>
-				<p>2016 Session 1<a href="https://summerinstitutes.stanford.edu">Stanford Pre-Collegiate Summer Institutes</a></p>
+				<p>2016 Session 1: <a href="https://summerinstitutes.stanford.edu">Stanford Pre-Collegiate Summer Institutes</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
