--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>An Artificial Intelligence Course</h1>
+        		<h1>Audio-Visual Data Analysis with Statistical and Deep Learning</h1>
 				<p>2016 Session 1: <a href="https://summerinstitutes.stanford.edu">Stanford Pre-Collegiate Summer Institutes</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
@@ -27,4 +27,4 @@
 		</footer>
 	</body>
 </html>
-4
+
