--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Audio-Visual Data Analysis with Statistical and Deep Learning</title>
+		<title>Statistical and Deep Learning</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
@@ -21,7 +21,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:iran@stanford.edu">Irán Román's (Principal Instructor) </a></li>
+        		<li><a href="mailto:iran@stanford.edu">Irán Román (Principal Instructor) </a></li>
         		<li><a href="mailto:mjolsen@stanford.edu">Michael Olsen (Teaching Assitant)</a></li>
 			</ul>
 		</footer>
