--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:iran@stanford.edu">Irán Román (Principal Instructor) </a></li>
-        		<li><a href="mailto:mjolsen@stanford.edu">Michael Olsen (Teaching Assitant)</a></li>
+        		<li><a href="mailto:mjolsen@stanford.edu">Michael Olsen (Teaching Assistant)</a></li>
 			</ul>
 		</footer>
 	</body>
