--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Lectures</a></li>
+        		<li><a href="https://drive.google.com/folderview?id=0B1gxPy-6qVrifnhmb3V5b0pnWHh1d1EyZ2pOMG5uMk13ZWp3NHJvcmNQTnpaOEdQQVhxYzg&usp=sharing">Lectures</a></li>
 	        	<li><a href="/about">Readings</a></li>
         		<li><a href="/cv">Homework</a></li>
     		</ul>
