--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     		<ul>
         		<li><a href="mailto:iran@stanford.edu">Irán Román (Principal Instructor) </a></li>
         		<li><a href="mailto:mjolsen@stanford.edu">Michael Olsen (Teaching Assistant)</a></li>
-			</ul>
+        		<li><a href="mailto:xxxx@stanford.edu">Vihan Lakshman (Teaching Assistant)</a></li>
+        		<li><a href="mailto:xxxx@stanford.edu">Courtney Vu (Teaching Assistant)</a></li>
+        		<li><a href="mailto:xxxx@stanford.edu">Geraldine Millos-Lopez (Teaching Assistant)</a></li>
+		</ul>
 		</footer>
 	</body>
 </html>
