--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Statistical and Deep Learning</h1>
+        		<img src="\images\home.png">
 				<p>2016 Session 1: <a href="https://summerinstitutes.stanford.edu">Stanford Pre-Collegiate Summer Institutes</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
