--- a/homework.html
+++ b/homework.html
@@ -7,11 +7,12 @@
 	<body>
 	  	<div id="Homework">
 		    <h1>Homework</h1>
-		      <li>----------------------------------------------------------------</li>
-		      <li>To be completed during the afternoon of the date listed</li>
-		      <li>----------------------------------------------------------------</li>
-		      <li><span>June 20th</span> &rarr; <a href="https://docs.google.com/document/d/1aLzbP88JH752LNVdgTwNwnNJGEs-IFf9Q5WxAZbsSh4/edit?usp=sharing">Nearest Neighbor and L2-Norm</a><span></li>
-		    </ul>
+			    <ul class="posts">
+			      <li>------------------------------------------------------------------</li>
+			      <li>To be completed during the afternoon of the date listed</li>
+			      <li>------------------------------------------------------------------</li>
+			      <li><span>June 20th</span> &rarr; <a href="https://docs.google.com/document/d/1aLzbP88JH752LNVdgTwNwnNJGEs-IFf9Q5WxAZbsSh4/edit?usp=sharing">Nearest Neighbor and L2-Norm</a><span></li>
+			    </ul>
 		</div>
 	</body>
 </html>
