--- a/homework.html
+++ b/homework.html
@@ -6,7 +6,7 @@
 
 	<body>
 	  	<div id="Homework">
-		    <h1>Homework</h1>
+		    <h1>Homework & Exercises</h1>
 			    <ul class="posts">
 			      <li>------------------------------------------------------------------</li>
 			      <li>To be completed during the afternoon of the date listed</li>
