--- a/lectures.html
+++ b/lectures.html
@@ -10,7 +10,7 @@
 			    <ul class="posts">
 			      <li><span>June 20th - Day 1</span> &rarr; <a href="https://docs.google.com/presentation/d/1IkT12SNw8VMy6nXFPrmEUg5nRPHLCQCQAWL0PUB4MSI/edit?usp=sharing">Introduction to the Course & Nearest Neighbors</a><span></li>
 			      <li><span>June 21th - Day 2</span> &rarr; <a href="https://docs.google.com/presentation/d/1QWGTxYSmIJH0m9ntHB-X78zEcABPQhOskC_-bBEkjZg/edit?usp=sharing">Nearest Neighbors Continued</a><span></li>
-			      <li><span>June 22nd - Day 3</span> &rarr; <a href="https://docs.google.com/presentation/d/18YnTbGSJ0txusBKtfTt2NVqEh2yFXjJNBqeCgemP6xk/edit?usp=sharing">KNN & Cross-Validation</a><span></li>
+			      <li><span>June 22nd - Day 3</span> &rarr; <a href="https://docs.google.com/presentation/d/18YnTbGSJ0txusBKtfTt2NVqEh2yFXjJNBqeCgemP6xk/edit?usp=sharing">KNN, Cross-Validation & Regression</a><span></li>
 			    </ul>
 		</div>
 	</body>
