--- a/homework.html
+++ b/homework.html
@@ -12,7 +12,7 @@
 			      <li>To be completed during the afternoon of the date listed</li>
 			      <li>------------------------------------------------------------------</li>
 			      <li><span>June 21st - Exercise</span> &rarr; <a href="https://docs.google.com/document/d/1aLzbP88JH752LNVdgTwNwnNJGEs-IFf9Q5WxAZbsSh4/edit?usp=sharing">Nearest Neighbor and L2-Norm</a><span></li>
-			      <li><span>June 22nd - Exercise</span> &rarr; <a href="https://docs.google.com/document/d/1GP86qolhXstAVv_0QEYnwR04n4b6MRbaOVo9MlOQWaI/edit?usp=sharing">KNN python class</a><span> (Files: </span><a href="homeworks/KNN_class_test.ipynb">KNN_class_test.ipynb</a><span>)</li>
+			      <li><span>June 22nd - Exercise</span> &rarr; <a href="https://docs.google.com/document/d/1GP86qolhXstAVv_0QEYnwR04n4b6MRbaOVo9MlOQWaI/edit?usp=sharing">KNN python class</a><span> (Files: </span><a href="homeworks/KNN_class_test.ipynb">KNN_class_test.ipynb</a><a href="homeworks/KNN.py">KNN.py</a><span>)</li>
 			    </ul>
 		</div>
 	</body>
