--- a/demos.html
+++ b/demos.html
@@ -9,7 +9,7 @@
 		    <h1>Demos</h1>
 		    <ul class="posts">
 		      <li><span>June 20th and 21st</span> &rarr; <a href="demos/NearestNeighbor_demo.ipynb">NN with CIFAR-10</a><span></li>
-		      <li><span>June 22nd</span> &rarr; <a href="demos/KNN.ipynb">KNN & Cross-Validation</a><span></li>
+		      <li><span>June 22nd</span> &rarr; <a href="demos/KNN_demo.ipynb">KNN & Cross-Validation</a><span></li>
 		    </ul>
 		</div>
 	</body>
