--- a/homework.html
+++ b/homework.html
@@ -14,6 +14,7 @@
 			      <li><span>June 21st - Exercise</span> &rarr; <a href="https://docs.google.com/document/d/1aLzbP88JH752LNVdgTwNwnNJGEs-IFf9Q5WxAZbsSh4/edit?usp=sharing">Nearest Neighbor and L2-Norm</a><span></li>
 			      <li><span>June 22nd - Exercise</span> &rarr; <a href="https://docs.google.com/document/d/1GP86qolhXstAVv_0QEYnwR04n4b6MRbaOVo9MlOQWaI/edit?usp=sharing">KNN python class</a><span> (Solutions: </span><a href="homeworks/KNN_solution.ipynb">KNN_solution.ipynb </a><a href="homeworks/KNN.py"> KNN.py</a><span>)</li>
 			      <li><span>June 23rd - Exercise</span> &rarr; <a href="https://docs.google.com/document/d/1M8sTJcCtQZDSNlPj1IYYxEdyqkLfIWnXx02PKF1eT0U/edit?usp=sharing">KNN Test Set, Chain rule & Regression</a><span> (Titanic Data: </span><a href="homeworks/train.csv">train.csv </a><span>)</li>
+			      <li><span>June 24th - Weekend Homework</span> &rarr; <a href="https://docs.google.com/document/d/1aLzbP88JH752LNVdgTwNwnNJGEs-IFf9Q5WxAZbsSh4/edit?usp=sharing">MNIST Challenge</a><span></li>
 			    </ul>
 		</div>
 	</body>
