--- a/demos.html
+++ b/demos.html
@@ -11,6 +11,7 @@
 		      <li><span>June 20th and 21st</span> &rarr; <a href="demos/NearestNeighbor_demo.ipynb">NN with CIFAR-10</a><span></li>
 		      <li><span>June 22nd</span> &rarr; <a href="demos/KNN_demo.ipynb">KNN & Cross-Validation</a><span></li>
 		      <li><span>June 23rd</span> &rarr; <a href="demos/Regression.ipynb">Linear & Logistic Regression</a><span></li>
+		      <li><span>June 24th</span> &rarr; <a href="demos/Regression_scikit.ipynb">Scikit Learn & MNIST</a><span></li>
 		    </ul>
 		</div>
 	</body>
