--- a/lectures.html
+++ b/lectures.html
@@ -13,6 +13,7 @@
 			      <li><span>June 22nd - Day 3</span> &rarr; <a href="https://docs.google.com/presentation/d/18YnTbGSJ0txusBKtfTt2NVqEh2yFXjJNBqeCgemP6xk/edit?usp=sharing">KNN, Cross-Validation</a><span></li>
 			      <li><span>June 23rd - Day 4</span> &rarr; <a href="https://docs.google.com/presentation/d/1X1hp71xhy91iHdmLJnh5-jjenVck1VzdP96hxung3ws/edit?usp=sharing">Regression</a><span></li>
 			      <li><span>June 24th - Day 5</span> &rarr; <a href="https://docs.google.com/presentation/d/1F4hlNE_14CFtxT_ZNZnz2oHfXMo9V1fh41yxKo7fopA/edit?usp=sharing">Softmax & MNIST</a><span></li>
+			      <li><span>June 27th - Day 6</span> &rarr; <a href="https://docs.google.com/presentation/d/1ET0AQRW0RjFWWSnPDvUHMqvtw0CMtPhUcNmk8frdvZI/edit?usp=sharing">Building your own Neural Network</a><span></li>
 			    </ul>
 		</div>
 	</body>
