--- a/lectures.html
+++ b/lectures.html
@@ -15,6 +15,7 @@
 			      <li><span>June 24th - Day 5</span> &rarr; <a href="https://docs.google.com/presentation/d/1F4hlNE_14CFtxT_ZNZnz2oHfXMo9V1fh41yxKo7fopA/edit?usp=sharing">Softmax & MNIST</a><span></li>
 			      <li><span>June 27th - Day 6</span> &rarr; <a href="https://docs.google.com/presentation/d/1ET0AQRW0RjFWWSnPDvUHMqvtw0CMtPhUcNmk8frdvZI/edit?usp=sharing">Building your own Neural Network</a><span></li>
 			      <li><span>June 28th - Day 7</span> &rarr; <a href="https://docs.google.com/presentation/d/1tWqMUIp9wAFQ3AiVzm4TyOXSSzVYjTB50r5Wr6tplZU/edit?usp=sharing">Improving our Neural Network</a><span></li>
+			      <li><span>June 29th - Day 8</span> &rarr; <a href="https://docs.google.com/presentation/d/1u18aj22NPr3aEP8rKWuLEcrrNYp73o2lZxhYxKMUvVY/edit?usp=sharing">Improving our Neural Network</a><span></li>
 			    </ul>
 		</div>
 	</body>
