--- a/demos.html
+++ b/demos.html
@@ -12,7 +12,9 @@
 		      <li><span>June 22nd</span> &rarr; <a href="demos/KNN_demo.ipynb">KNN & Cross-Validation</a><span></li>
 		      <li><span>June 23rd</span> &rarr; <a href="demos/Regression.ipynb">Linear & Logistic Regression</a><span></li>
 		      <li><span>June 24th</span> &rarr; <a href="demos/Regression_scikit.ipynb">Scikit Learn & MNIST</a><span></li>
-		      <li><span>June 27th & 28th & 29th </span> &rarr; <a href="demos/Neural_Network_Demo.ipynb">Small Neural Network</a><span></li>
+		      <li><span>June 27th & 28th</span> &rarr; <a href="demos/Neural_Network_Demo.ipynb">Small Neural Network</a><span></li>
+		      <li><span>June 29th Demo 1</span> &rarr; <a href="demos/Two_Layer_Neural_Network_Demo.ipynb">Two Layer Neural Network</a><span></li>
+		      <li><span>June 29th Demo 2</span> &rarr; <a href="demos/convDemo.ipynb">Two Layer Neural Network</a><span></li>
 		    </ul>
 		</div>
 	</body>
