--- a/homework.html
+++ b/homework.html
@@ -17,6 +17,8 @@
 			      <li><span>June 24th - Weekend Homework</span> &rarr; <a href="https://docs.google.com/document/d/1P61E_wZX8ZyctobkC5GttgtWH0vxuNnrf6O0bfJ8B6U/edit?usp=sharing">MNIST Challenge</a><span></li>
 			      <li><span>June 27th - Exercise</span> &rarr; <a href="https://docs.google.com/document/d/1qmfdtmox5zB5ti63UTRTqRUdd3lur9SXrucI_Mi2YZ4/edit?usp=sharing">Small Neural Networks Pt.1</a><span></li>
 			      <li><span>June 28th - Exercise</span> &rarr; <a href="https://docs.google.com/document/d/1sy7bNYlPhIxqCjDpF3cG9iqtTKJaEork0mgIWZ7EoU4/edit?usp=sharing">Small Neural Networks Pt.2</a><span></li>
+			      <li><span>June 29th - Project</span> &rarr; What is your project idea?<span></li>
+			      <li><span>June 30th - Weekend Homework</span> &rarr; Game AI assignment by TAs & Work on Final Project<span></li>
 			    </ul>
 		</div>
 	</body>
