--- a/lectures.html
+++ b/lectures.html
@@ -17,6 +17,7 @@
 			      <li><span>June 28th - Day 7</span> &rarr; <a href="https://docs.google.com/presentation/d/1tWqMUIp9wAFQ3AiVzm4TyOXSSzVYjTB50r5Wr6tplZU/edit?usp=sharing">Improving our Neural Network</a><span></li>
 			      <li><span>June 29th - Day 8</span> &rarr; <a href="https://docs.google.com/presentation/d/1u18aj22NPr3aEP8rKWuLEcrrNYp73o2lZxhYxKMUvVY/edit?usp=sharing">Convolution and DSP</a><span></li>
 			      <li><span>June 30th - Day 9</span> &rarr; <a href="https://docs.google.com/presentation/d/14kOX1BKKTQI62Ouz5bPW0I35DlcpM-tPdfSH2k6z0Z4/edit?usp=sharing">Convolutional Neural Networks & Libraries</a><span></li>
+			      <li><span>July 4th - Day 10</span> &rarr; <a href="https://docs.google.com/presentation/d/1yOnJOz04orzsCscvAPrj2RXCKu1lPNSaOGpxeyu-EVM/edit?usp=sharing">NLP and RNNs</a><span></li>
 			    </ul>
 		</div>
 	</body>
