--- a/homework.html
+++ b/homework.html
@@ -19,6 +19,7 @@
 			      <li><span>June 28th - Exercise</span> &rarr; <a href="https://docs.google.com/document/d/1sy7bNYlPhIxqCjDpF3cG9iqtTKJaEork0mgIWZ7EoU4/edit?usp=sharing">Small Neural Networks Pt.2</a><span></li>
 			      <li><span>June 29th - Project</span> &rarr; What is your project idea?<span></li>
 			      <li><span>June 30th - Weekend Homework</span> &rarr; Game AI assignment by TAs & Work on Final Project<span></li>
+			      <li><span>July 4th</span> &rarr; Work on Project and Reading<span></li>
 			    </ul>
 		</div>
 	</body>
