--- a/lectures.html
+++ b/lectures.html
@@ -18,6 +18,7 @@
 			      <li><span>June 29th - Day 8</span> &rarr; <a href="https://docs.google.com/presentation/d/1u18aj22NPr3aEP8rKWuLEcrrNYp73o2lZxhYxKMUvVY/edit?usp=sharing">Convolution and DSP</a><span></li>
 			      <li><span>June 30th - Day 9</span> &rarr; <a href="https://docs.google.com/presentation/d/14kOX1BKKTQI62Ouz5bPW0I35DlcpM-tPdfSH2k6z0Z4/edit?usp=sharing">Convolutional Neural Networks & Libraries</a><span></li>
 			      <li><span>July 4th - Day 10</span> &rarr; <a href="https://docs.google.com/presentation/d/1yOnJOz04orzsCscvAPrj2RXCKu1lPNSaOGpxeyu-EVM/edit?usp=sharing">NLP and RNNs</a><span></li>
+			      <li><span>July 5th - Day 11</span> &rarr; <a href="https://docs.google.com/presentation/d/1E37qE6J2O0jPapdcIJ4vS2rU4Y0vRTCzGu-vtSY3bYw/edit?usp=sharing">DSP and the FFT</a><span></li>
 			    </ul>
 		</div>
 	</body>
