--- a/demos.html
+++ b/demos.html
@@ -16,6 +16,7 @@
 		      <li><span>June 29th Demo 1</span> &rarr; <a href="demos/convDemo.ipynb">Convolution</a><span></li>
 		      <li><span>June 29th Demo 2</span> &rarr; <a href="demos/Two_Layer_Neural_Network_Demo.ipynb">Two Layer Neural Network</a><span></li>
 		      <li><span>June 30th</span> &rarr; <a href="demos/mnist.py">CNN Demo</a><span></li>
+		      <li><span>Juty 5th</span> &rarr; <a href="demos/fftDemo.ipynb">FFT Demo</a><span></li>
 		    </ul>
 		</div>
 	</body>
