--- a/demos.html
+++ b/demos.html
@@ -16,7 +16,7 @@
 		      <li><span>June 29th Demo 1</span> &rarr; <a href="demos/convDemo.ipynb">Convolution</a><span></li>
 		      <li><span>June 29th Demo 2</span> &rarr; <a href="demos/Two_Layer_Neural_Network_Demo.ipynb">Two Layer Neural Network</a><span></li>
 		      <li><span>June 30th</span> &rarr; <a href="demos/mnist.py">CNN Demo</a><span></li>
-		      <li><span>Juty 5th</span> &rarr; <a href="demos/fftDemo.ipynb">FFT Demo</a><span></li>
+		      <li><span>Juty 5th</span> &rarr; <a href="demos/fftDemo.ipynb">FFT Demo</a><span> (Files: </span><a href="demos/classical.00000.wav">classical audio</a><a href="demos/hiphop.00000.wav">hiphop audio</a><a href="demos/voices.wav">voices audio</a><span>)</span></li>
 		    </ul>
 		</div>
 	</body>
